cs101_information_objects.h

/**
 * \file cs101_information_objects.h
 * \brief Functions for CS101/CS104 information objects
 * These are the implementation of the different data types and message types
 */

/**
 * @defgroup COMMON Common API functions
 *
 * @{
 */

/**
 * \brief Message type IDs
 */
typedef enum {
    M_SP_NA_1 = 1,
    M_SP_TA_1 = 2,
    M_DP_NA_1 = 3,
    M_DP_TA_1 = 4,
    M_ST_NA_1 = 5,
    M_ST_TA_1 = 6,
    M_BO_NA_1 = 7,
    M_BO_TA_1 = 8,
    M_ME_NA_1 = 9,
    M_ME_TA_1 = 10,
    M_ME_NB_1 = 11,
    M_ME_TB_1 = 12,
    M_ME_NC_1 = 13,
    M_ME_TC_1 = 14,
    M_IT_NA_1 = 15,
    M_IT_TA_1 = 16,
    M_EP_TA_1 = 17,
    M_EP_TB_1 = 18,
    M_EP_TC_1 = 19,
    M_PS_NA_1 = 20,
    M_ME_ND_1 = 21,
    M_SP_TB_1 = 30,
    M_DP_TB_1 = 31,
    M_ST_TB_1 = 32,
    M_BO_TB_1 = 33,
    M_ME_TD_1 = 34,
    M_ME_TE_1 = 35,
    M_ME_TF_1 = 36,
    M_IT_TB_1 = 37,
    M_EP_TD_1 = 38,
    M_EP_TE_1 = 39,
    M_EP_TF_1 = 40,
    C_SC_NA_1 = 45,
    C_DC_NA_1 = 46,
    C_RC_NA_1 = 47,
    C_SE_NA_1 = 48,
    C_SE_NB_1 = 49,
    C_SE_NC_1 = 50,
    C_BO_NA_1 = 51,
    C_SC_TA_1 = 58,
    C_DC_TA_1 = 59,
    C_RC_TA_1 = 60,
    C_SE_TA_1 = 61,
    C_SE_TB_1 = 62,
    C_SE_TC_1 = 63,
    C_BO_TA_1 = 64,
    M_EI_NA_1 = 70,
    C_IC_NA_1 = 100,
    C_CI_NA_1 = 101,
    C_RD_NA_1 = 102,
    C_CS_NA_1 = 103,
    C_TS_NA_1 = 104,
    C_RP_NA_1 = 105,
    C_CD_NA_1 = 106,
    C_TS_TA_1 = 107,
    P_ME_NA_1 = 110,
    P_ME_NB_1 = 111,
    P_ME_NC_1 = 112,
    P_AC_NA_1 = 113,
    F_FR_NA_1 = 120,
    F_SR_NA_1 = 121,
    F_SC_NA_1 = 122,
    F_LS_NA_1 = 123,
    F_AF_NA_1 = 124,
    F_SG_NA_1 = 125,
    F_DR_TA_1 = 126,
    F_SC_NB_1 = 127
} IEC60870_5_TypeID;
/************************************************
 * InformationObject
 ************************************************/

typedef struct sInformationObject* InformationObject;
/** @} */

/**
 * \name CS101_SOF
 *
 * \brief Status of file (SOF) definitions - IEC 60870-5-101:2003 7.2.6.38
 *
 * @{
 */

/** \brief bit mask value for STATUS part of SOF */
#define CS101_SOF_STATUS 0x1f
/** \brief bit mask value for LFD (last file of the directory) flag */
#define CS101_SOF_LFD 0x20
/** \brief bit mask value for FOR (name defines subdirectory) flag */
#define CS101_SOF_FOR 0x40
/** \brief bit mask value for FA (file transfer of this file is active) flag */
#define CS101_SOF_FA 0x80
/** @} */

typedef struct sFileReady* FileReady;
/**
 * \brief Create a new instance of FileReady information object
 *
 * For message type: F_FR_NA_1 (120)
 *
 * \param self
 * \param ioa
 * \param nof name of file (1 for transparent file)
 * \param lengthOfFile
 * \param positive when true file is ready to transmit
 */
FileReady
FileReady_create(FileReady self, int ioa, uint16_t nof, uint32_t lengthOfFile, bool positive);
void
FileReady_destroy(FileReady self);
uint8_t
FileReady_getFRQ(FileReady self);
void
FileReady_setFRQ(FileReady self, uint8_t frq);
bool
FileReady_isPositive(FileReady self);
uint16_t
FileReady_getNOF(FileReady self);
uint32_t
FileReady_getLengthOfFile(FileReady self);
void
FileReady_destroy(FileReady self);
/*******************************************
 * SectionReady : InformationObject
 *******************************************/

typedef struct sSectionReady* SectionReady;
SectionReady
SectionReady_create(SectionReady self, int ioa, uint16_t nof, uint8_t nos, uint32_t lengthOfSection, bool notReady);
bool
SectionReady_isNotReady(SectionReady self);
uint8_t
SectionReady_getSRQ(SectionReady self);
void
SectionReady_setSRQ(SectionReady self, uint8_t srq);
uint16_t
SectionReady_getNOF(SectionReady self);
uint8_t
SectionReady_getNameOfSection(SectionReady self);
uint32_t
SectionReady_getLengthOfSection(SectionReady self);
void
SectionReady_destroy(SectionReady self);
/*******************************************
 * FileCallOrSelect : InformationObject
 *******************************************/


typedef struct sFileCallOrSelect* FileCallOrSelect;
FileCallOrSelect
FileCallOrSelect_create(FileCallOrSelect self, int ioa, uint16_t nof, uint8_t nos, uint8_t scq);
uint16_t
FileCallOrSelect_getNOF(FileCallOrSelect self);
uint8_t
FileCallOrSelect_getNameOfSection(FileCallOrSelect self);
uint8_t
FileCallOrSelect_getSCQ(FileCallOrSelect self);
void
FileCallOrSelect_destroy(FileCallOrSelect self);
/*************************************************
 * FileLastSegmentOrSection : InformationObject
 *************************************************/

typedef struct sFileLastSegmentOrSection* FileLastSegmentOrSection;
FileLastSegmentOrSection
FileLastSegmentOrSection_create(FileLastSegmentOrSection self, int ioa, uint16_t nof, uint8_t nos, uint8_t lsq, uint8_t chs);
uint16_t
FileLastSegmentOrSection_getNOF(FileLastSegmentOrSection self);
uint8_t
FileLastSegmentOrSection_getNameOfSection(FileLastSegmentOrSection self);
uint8_t
FileLastSegmentOrSection_getLSQ(FileLastSegmentOrSection self);
uint8_t
FileLastSegmentOrSection_getCHS(FileLastSegmentOrSection self);
void
FileLastSegmentOrSection_destroy(FileLastSegmentOrSection self);
/*************************************************
 * FileACK : InformationObject
 *************************************************/

typedef struct sFileACK* FileACK;
FileACK
FileACK_create(FileACK self, int ioa, uint16_t nof, uint8_t nos, uint8_t afq);
uint16_t
FileACK_getNOF(FileACK self);
uint8_t
FileACK_getNameOfSection(FileACK self);
uint8_t
FileACK_getAFQ(FileACK self);
void
FileACK_destroy(FileACK self);
/*************************************************
 * FileSegment : InformationObject
 *************************************************/

typedef struct sFileSegment* FileSegment;
FileSegment
FileSegment_create(FileSegment self, int ioa, uint16_t nof, uint8_t nos, uint8_t* data, uint8_t los);
uint16_t
FileSegment_getNOF(FileSegment self);
uint8_t
FileSegment_getNameOfSection(FileSegment self);
uint8_t
FileSegment_getLengthOfSegment(FileSegment self);
uint8_t*
FileSegment_getSegmentData(FileSegment self);
int
FileSegment_GetMaxDataSize(CS101_AppLayerParameters parameters);
void
FileSegment_destroy(FileSegment self);
/*************************************************
 * FileDirectory: InformationObject
 *************************************************/

typedef struct sFileDirectory* FileDirectory;
FileDirectory
FileDirectory_create(FileDirectory self, int ioa, uint16_t nof, int lengthOfFile, uint8_t sof, CP56Time2a creationTime);
uint16_t
FileDirectory_getNOF(FileDirectory self);
uint8_t
FileDirectory_getSOF(FileDirectory self);
int
FileDirectory_getSTATUS(FileDirectory self);
bool
FileDirectory_getLFD(FileDirectory self);
bool
FileDirectory_getFOR(FileDirectory self);
bool
FileDirectory_getFA(FileDirectory self);
uint8_t
FileDirectory_getLengthOfFile(FileDirectory self);
CP56Time2a
FileDirectory_getCreationTime(FileDirectory self);
void
FileDirectory_destroy(FileDirectory self);