cs101_information_objects.nim


## * @}
## *
##  \name CS101_SOF
##
##  \brief Status of file (SOF) definitions - IEC 60870-5-101:2003 7.2.6.38
##
##  @{
##
## * \brief bit mask value for STATUS part of SOF

const
  CS101_SOF_STATUS* = 0x00000000

## * \brief bit mask value for LFD (last file of the directory) flag

const
  CS101_SOF_LFD* = 0x00000000

## * \brief bit mask value for FOR (name defines subdirectory) flag

const
  CS101_SOF_FOR* = 0x00000000

## * \brief bit mask value for FA (file transfer of this file is active) flag

const
  CS101_SOF_FA* = 0x00000000

## * @}

type
  FileReady* = ptr sFileReady

## *
##  \brief Create a new instance of FileReady information object
##
##  For message type: F_FR_NA_1 (120)
##
##  \param self
##  \param ioa
##  \param nof name of file (1 for transparent file)
##  \param lengthOfFile
##  \param positive when true file is ready to transmit
##

proc FileReady_create*(self: FileReady; ioa: cint; nof: uint16_t;
                      lengthOfFile: uint32_t; positive: bool): FileReady {.
    importc: "FileReady_create",  cdecl.}
proc FileReady_destroy*(self: FileReady) {.importc: "FileReady_destroy",
                                         cdecl.}
proc FileReady_getFRQ*(self: FileReady): uint8_t {.importc: "FileReady_getFRQ",
     cdecl.}
proc FileReady_setFRQ*(self: FileReady; frq: uint8_t) {.importc: "FileReady_setFRQ",
     cdecl.}
proc FileReady_isPositive*(self: FileReady): bool {.importc: "FileReady_isPositive",
     cdecl.}
proc FileReady_getNOF*(self: FileReady): uint16_t {.importc: "FileReady_getNOF",
     cdecl.}
proc FileReady_getLengthOfFile*(self: FileReady): uint32_t {.
    importc: "FileReady_getLengthOfFile",  cdecl.}
#proc FileReady_destroy*(self: FileReady) {.importc: "FileReady_destroy",
#                                         cdecl.}
## ******************************************
##  SectionReady : InformationObject
## *****************************************

type
  SectionReady* = ptr sSectionReady

proc SectionReady_create*(self: SectionReady; ioa: cint; nof: uint16_t; nos: uint8_t;
                         lengthOfSection: uint32_t; notReady: bool): SectionReady {.
    importc: "SectionReady_create",  cdecl.}
proc SectionReady_isNotReady*(self: SectionReady): bool {.
    importc: "SectionReady_isNotReady",  cdecl.}
proc SectionReady_getSRQ*(self: SectionReady): uint8_t {.
    importc: "SectionReady_getSRQ",  cdecl.}
proc SectionReady_setSRQ*(self: SectionReady; srq: uint8_t) {.
    importc: "SectionReady_setSRQ",  cdecl.}
proc SectionReady_getNOF*(self: SectionReady): uint16_t {.
    importc: "SectionReady_getNOF",  cdecl.}
proc SectionReady_getNameOfSection*(self: SectionReady): uint8_t {.
    importc: "SectionReady_getNameOfSection",  cdecl.}
proc SectionReady_getLengthOfSection*(self: SectionReady): uint32_t {.
    importc: "SectionReady_getLengthOfSection",  cdecl.}
proc SectionReady_destroy*(self: SectionReady) {.importc: "SectionReady_destroy",
     cdecl.}
## ******************************************
##  FileCallOrSelect : InformationObject
## *****************************************

type
  FileCallOrSelect* = ptr sFileCallOrSelect

proc FileCallOrSelect_create*(self: FileCallOrSelect; ioa: cint; nof: uint16_t;
                             nos: uint8_t; scq: uint8_t): FileCallOrSelect {.
    importc: "FileCallOrSelect_create",  cdecl.}
proc FileCallOrSelect_getNOF*(self: FileCallOrSelect): uint16_t {.
    importc: "FileCallOrSelect_getNOF",  cdecl.}
proc FileCallOrSelect_getNameOfSection*(self: FileCallOrSelect): uint8_t {.
    importc: "FileCallOrSelect_getNameOfSection",  cdecl.}
proc FileCallOrSelect_getSCQ*(self: FileCallOrSelect): uint8_t {.
    importc: "FileCallOrSelect_getSCQ",  cdecl.}
proc FileCallOrSelect_destroy*(self: FileCallOrSelect) {.
    importc: "FileCallOrSelect_destroy",  cdecl.}
## ************************************************
##  FileLastSegmentOrSection : InformationObject
## ***********************************************

type
  FileLastSegmentOrSection* = ptr sFileLastSegmentOrSection

proc FileLastSegmentOrSection_create*(self: FileLastSegmentOrSection; ioa: cint;
                                     nof: uint16_t; nos: uint8_t; lsq: uint8_t;
                                     chs: uint8_t): FileLastSegmentOrSection {.
    importc: "FileLastSegmentOrSection_create",  cdecl.}
proc FileLastSegmentOrSection_getNOF*(self: FileLastSegmentOrSection): uint16_t {.
    importc: "FileLastSegmentOrSection_getNOF",  cdecl.}
proc FileLastSegmentOrSection_getNameOfSection*(self: FileLastSegmentOrSection): uint8_t {.
    importc: "FileLastSegmentOrSection_getNameOfSection",  cdecl.}
proc FileLastSegmentOrSection_getLSQ*(self: FileLastSegmentOrSection): uint8_t {.
    importc: "FileLastSegmentOrSection_getLSQ",  cdecl.}
proc FileLastSegmentOrSection_getCHS*(self: FileLastSegmentOrSection): uint8_t {.
    importc: "FileLastSegmentOrSection_getCHS",  cdecl.}
proc FileLastSegmentOrSection_destroy*(self: FileLastSegmentOrSection) {.
    importc: "FileLastSegmentOrSection_destroy",  cdecl.}
## ************************************************
##  FileACK : InformationObject
## ***********************************************

type
  FileACK* = ptr sFileACK

proc FileACK_create*(self: FileACK; ioa: cint; nof: uint16_t; nos: uint8_t; afq: uint8_t): FileACK {.
    importc: "FileACK_create",  cdecl.}
proc FileACK_getNOF*(self: FileACK): uint16_t {.importc: "FileACK_getNOF",
     cdecl.}
proc FileACK_getNameOfSection*(self: FileACK): uint8_t {.
    importc: "FileACK_getNameOfSection",  cdecl.}
proc FileACK_getAFQ*(self: FileACK): uint8_t {.importc: "FileACK_getAFQ",
     cdecl.}
proc FileACK_destroy*(self: FileACK) {.importc: "FileACK_destroy",  cdecl.}
## ************************************************
##  FileSegment : InformationObject
## ***********************************************

type
  FileSegment* = ptr sFileSegment

proc FileSegment_create*(self: FileSegment; ioa: cint; nof: uint16_t; nos: uint8_t;
                        data: ptr uint8_t; los: uint8_t): FileSegment {.
    importc: "FileSegment_create",  cdecl.}
proc FileSegment_getNOF*(self: FileSegment): uint16_t {.
    importc: "FileSegment_getNOF",  cdecl.}
proc FileSegment_getNameOfSection*(self: FileSegment): uint8_t {.
    importc: "FileSegment_getNameOfSection",  cdecl.}
proc FileSegment_getLengthOfSegment*(self: FileSegment): uint8_t {.
    importc: "FileSegment_getLengthOfSegment",  cdecl.}
proc FileSegment_getSegmentData*(self: FileSegment): ptr uint8_t {.
    importc: "FileSegment_getSegmentData",  cdecl.}
proc FileSegment_GetMaxDataSize*(parameters: CS101_AppLayerParameters): cint {.
    importc: "FileSegment_GetMaxDataSize",  cdecl.}
proc FileSegment_destroy*(self: FileSegment) {.importc: "FileSegment_destroy",
     cdecl.}
## ************************************************
##  FileDirectory: InformationObject
## ***********************************************

type
  FileDirectory* = ptr sFileDirectory

proc FileDirectory_create*(self: FileDirectory; ioa: cint; nof: uint16_t;
                          lengthOfFile: cint; sof: uint8_t; creationTime: CP56Time2a): FileDirectory {.
    importc: "FileDirectory_create",  cdecl.}
proc FileDirectory_getNOF*(self: FileDirectory): uint16_t {.
    importc: "FileDirectory_getNOF",  cdecl.}
proc FileDirectory_getSOF*(self: FileDirectory): uint8_t {.
    importc: "FileDirectory_getSOF",  cdecl.}
proc FileDirectory_getSTATUS*(self: FileDirectory): cint {.
    importc: "FileDirectory_getSTATUS",  cdecl.}
proc FileDirectory_getLFD*(self: FileDirectory): bool {.
    importc: "FileDirectory_getLFD",  cdecl.}
proc FileDirectory_getFOR*(self: FileDirectory): bool {.
    importc: "FileDirectory_getFOR",  cdecl.}
proc FileDirectory_getFA*(self: FileDirectory): bool {.
    importc: "FileDirectory_getFA",  cdecl.}
proc FileDirectory_getLengthOfFile*(self: FileDirectory): uint8_t {.
    importc: "FileDirectory_getLengthOfFile",  cdecl.}
proc FileDirectory_getCreationTime*(self: FileDirectory): CP56Time2a {.
    importc: "FileDirectory_getCreationTime",  cdecl.}
proc FileDirectory_destroy*(self: FileDirectory) {.
    importc: "FileDirectory_destroy",  cdecl.}
## *
##  @}
##
